# OpencvDemo

./: CMakeLists.txt  README.md  main.cpp
include/: testBlobFromImageCpu.h
src/: testBlobFromImageCpu.cpp
